[gd_scene load_steps=20 format=3 uid="uid://c16xfn7ajuhop"]

[ext_resource type="Script" path="res://Units/RangeAttacker.gd" id="1_d7tcx"]
[ext_resource type="Texture2D" uid="uid://du7wmcbhyp8tx" path="res://Units/catMarine.png" id="2_i53o3"]
[ext_resource type="PackedScene" uid="uid://v20f2mgdjv5i" path="res://Global/rangeStateMachine.tscn" id="3_m4a16"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wau8h"]
radius = 2.99998
height = 13.9999

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uaqgl"]
bg_color = Color(1, 1, 1, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.862745, 0.819608, 0.313726, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="Animation" id="Animation_xdipx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CatMarine:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_ad1l3"]
resource_name = "WalkDown"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CatMarine:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_v1cqn"]
resource_name = "WalkLeft"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CatMarine:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_32r5d"]
resource_name = "WalkRight"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CatMarine:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_6aipp"]
resource_name = "WalkUp"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CatMarine:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_mpw7d"]
resource_name = "attackDown"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CatMarine:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [16, 17, 16, 17]
}

[sub_resource type="Animation" id="Animation_7rfee"]
resource_name = "attackLeft"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CatMarine:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [28, 29, 28, 29]
}

[sub_resource type="Animation" id="Animation_5rilh"]
resource_name = "attackRight"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CatMarine:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [24, 25, 24, 25]
}

[sub_resource type="Animation" id="Animation_bmpec"]
resource_name = "attackUp"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CatMarine:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [20, 21, 20, 21]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iguak"]
_data = {
"RESET": SubResource("Animation_xdipx"),
"WalkDown": SubResource("Animation_ad1l3"),
"WalkLeft": SubResource("Animation_v1cqn"),
"WalkRight": SubResource("Animation_32r5d"),
"WalkUp": SubResource("Animation_6aipp"),
"attackDown": SubResource("Animation_mpw7d"),
"attackLeft": SubResource("Animation_7rfee"),
"attackRight": SubResource("Animation_5rilh"),
"attackUp": SubResource("Animation_bmpec")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_v46xs"]
radius = 102.005

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ltpar"]
bg_color = Color(0.0352941, 0.0352941, 0.0352941, 0.447059)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ruf1s"]
bg_color = Color(0, 0.729412, 0.0980392, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
anti_aliasing_size = 0.2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h15sj"]
size = Vector2(20, 6.80418)

[node name="rangeAttacker" type="CharacterBody2D"]
script = ExtResource("1_d7tcx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 5)
rotation = -1.56731
shape = SubResource("CapsuleShape2D_wau8h")

[node name="Box" type="Panel" parent="."]
offset_left = -8.0
offset_right = 9.0
offset_bottom = 10.0
theme_override_styles/panel = SubResource("StyleBoxFlat_uaqgl")

[node name="CatMarine" type="Sprite2D" parent="."]
position = Vector2(1, 1)
scale = Vector2(0.229687, 0.229687)
texture = ExtResource("2_i53o3")
hframes = 4
vframes = 8
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_iguak")
}

[node name="StopTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="RangeStateMachine" parent="." instance=ExtResource("3_m4a16")]

[node name="VisionRange" type="Area2D" parent="."]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisionRange"]
position = Vector2(0, 4)
shape = SubResource("CircleShape2D_v46xs")
metadata/_edit_lock_ = true

[node name="NavigationNode" type="Node2D" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="NavigationNode"]
avoidance_enabled = true
radius = 16.0
avoidance_mask = 2
debug_enabled = true

[node name="NavTimer" type="Timer" parent="NavigationNode"]
wait_time = 0.1
autostart = true

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -8.0
offset_top = -10.0
offset_right = 7.0
offset_bottom = -8.0
theme_override_styles/background = SubResource("StyleBoxFlat_ltpar")
theme_override_styles/fill = SubResource("StyleBoxFlat_ruf1s")
value = 50.0
show_percentage = false

[node name="TouchZone" type="Area2D" parent="."]
position = Vector2(0, -11)
scale = Vector2(1.70103, 3.57692)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TouchZone"]
position = Vector2(0, 3.21505)
scale = Vector2(0.618268, 0.945023)
shape = SubResource("RectangleShape2D_h15sj")

[connection signal="animation_finished" from="AnimationPlayer" to="RangeStateMachine" method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="StopTimer" to="RangeStateMachine" method="_on_stop_timer_timeout"]
[connection signal="body_entered" from="VisionRange" to="." method="_on_vision_range_body_entered"]
[connection signal="body_exited" from="VisionRange" to="." method="_on_vision_range_body_exited"]
[connection signal="timeout" from="NavigationNode/NavTimer" to="." method="_on_nav_timer_timeout"]
[connection signal="mouse_shape_entered" from="TouchZone" to="." method="_on_touch_zone_mouse_shape_entered"]
[connection signal="mouse_shape_exited" from="TouchZone" to="." method="_on_touch_zone_mouse_shape_exited"]
